devops/specs/ui/ui-parts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: ui
  labels:
    app: ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: ui
